--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5
+Markdown==2.3.1
 South==0.7.6
 amqp==1.0.11
 anyjson==0.3.3
@@ -10,6 +11,8 @@ distribute==0.6.34
 dj-database-url==0.2.1
 django-celery==3.0.17
 django-celery-with-redis==3.0
+django-dajax==0.9.2
+django-dajaxice==0.5.5
 -e git://github.com/initcrash/django-denorm@ef2bd084804b580f27dae9ea37d862368bd978cc#egg=django_denorm-master
 django-grappelli==2.4.6
 django-heroku-redisify==0.2.1
@@ -18,6 +21,7 @@ django-redis-sessions==0.4.0
 django-s3-folder-storage==0.1
 django-secure==1.0
 django-storages==1.1.5
+django-timedeltafield==0.7.0
 gunicorn==0.16.1
 hiredis==0.1.1
 kombu==2.5.10
