--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-grappelli==2.4.6
 django-heroku-redisify==0.2.1
 django-redis-cache==0.9.7
 django-redis-sessions==0.4.0
+django-s3-collectstatic==1.0
 django-s3-folder-storage==0.1
 django-secure==1.0
 django-storages==1.1.5
