--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ django-grappelli==2.4.6
 django-heroku-redisify==0.2.1
 django-redis-cache==0.9.7
 django-redis-sessions==0.4.0
-django-s3-collectstatic==1.0
+-e git://github.com/AGoodId/django-s3-collectstatic.git@baf18403f629762a63726e976848e98e79766201#egg=django_s3_collectstatic-master
 django-s3-folder-storage==0.1
 django-secure==1.0
 django-storages==1.1.5
