--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.5
 Markdown==2.3.1
 South==0.7.6
 amqp==1.0.11
+analytics-python==0.4.2
 anyjson==0.3.3
 billiard==2.7.3.28
 boto==2.12.0
@@ -9,6 +10,7 @@ celery==3.0.19
 celery-with-redis==3.0
 distribute==0.6.34
 dj-database-url==0.2.1
+dj-static==0.0.5
 django-attachments==0.3.1
 -e git+https://github.com/AWhitty/django-bootstrap3.git@3d1a0e0eec46d5d5495e226512713c2e7d7ef0e5#egg=django_bootstrap3-master
 django-celery==3.0.17
@@ -35,5 +37,7 @@ python-dateutil==2.1
 pytz==2013b
 raven==3.3.7
 redis==2.7.5
+requests==1.2.3
 six==1.3.0
+static==0.4
 wsgiref==0.1.2
